# ey-agentic-ai-python-langchain-langgraph-101

./: .gitignore  README.md  main.py  pyproject.toml
capstone/: README.md
day-1/project-1-calculator/: app.py
day-1/python-basics/: 01_hello_agent.py  02_core_types.py  03_strings.py  04_tuples_and_sets.py  05_string_formatting.py
day-2/contact_book/: app.py  contacts.json
day-2/python-basics-part-2/: 01_lists.py
day_3_agentic_ai/01_llm_mechanics/: 01_first_call.py  02_decoding_controls.py
day_4_langchain/01_langchain_core/: 01_init_chat_model.py  02_prompt_templates_parsers.py  04_project_emi_affordability_app.py
day_4_langchain/02_vector_databases/: 02_cosine_similarity_langchain.py  03_embedding_playground.py  04_chroma_basics.py  05_qdrant_selfhosted.py
day_5_langgraph/01_building_blocks/: 07_send.py  08_start_end.py  09_compilation.py  10_node_caching.py  11_recursion_limit.py  12_runtime_context.py
day_5_langgraph/02_capabilities/: 02b_durable_crash_demo.py  03_memory.py  04_streaming.py
