[project]
name = "agentic-ai-python-langchain-langgraph-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.20.0",
    "langchain>=1.3.14",
    "langchain-openrouter>=0.2.6",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]
